[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qugradlab"
version = "0.1.1"
authors = [
  { name="Christopher K. Long", email="ckl45@cam.ac.uk" },
  { name="Crispin H. W. Barnes" },
  { name="David R. M. Arvidsson-Shukur" },
  { name="Normann Mertig" }
]
maintainers = [
  { name="Christopher K. Long", email="ckl45@cam.ac.uk" },
]
description = "An extension to the Python package QuGrad that implements common Hilbert space structures, Hamiltonians, and pulse shapes for quantum control."
keywords = ["Hamiltonian", "pulse", "control"]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Quantum Computing"
]
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/Christopher-K-Long/QuGrad"
Documentation = "https://QuGrad.readthedocs.io/"
Issues = "https://github.com/Christopher-K-Long/QuGrad/issues"
Changelog = "https://github.com/Christopher-K-Long/QuGrad/blob/main/ChangeLog.md"